# diplomatai-reborn

./: .gitignore  package-lock.json  package.json
api-auth/: app.py
api-orchestrator/: .gitignore  Dockerfile  README.md  makefile  pyproject.toml  requirements.txt
api-orchestrator/app/: main.py  requirements.txt  settings.py  test.py
api-orchestrator/app/config/: __init__.py  constant.py  prompt_constant.py
api-orchestrator/app/dependencies/: OpenAI.py  Postgre copy backup.txt  Postgre.py  __init__.py
api-orchestrator/app/func_call/: Functions.py  __init__.py  chatbot_function_middleware.json  market_intelligence_function_middleware.json
api-orchestrator/app/rag/: __init__.py  faq.py
api-orchestrator/app/router/: auth.py  router.py
api-orchestrator/app/schemas/: __init__.py  handler.py  params.py  utils.py
api-orchestrator/app/services/: __init__.py  openai.py
api-orchestrator/app/utils/: utils.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/public/: MARKET MIND.docx  index.html
frontend/src/: App.js  index.js
frontend/src/Components/: DocumentGenerator.js  InvoiceForm.js  LoginForm.js  Modal.js  Navbar.js  RegisterForm.js
frontend/src/Pages/: ChatbotPage.js  GeneratePDFPage.js  index.js
frontend/src/assets/: icon-ai.jfif
