[tool.poetry]
name = "chatgpt-nawa-codebase"
version = "0.1.0"
description = "legacy dependencies"
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
amqp = "5.1.1"
anyio = "3.7.1"
asgiref = "3.8.1"
async-timeout = "4.0.2"
asyncmy = "0.2.8"
asyncpg = "0.28.0"
attrs = "23.1.0"
bidict = "0.22.1"
billiard = "4.1.0"
celery = "5.3.4"
certifi = "2023.7.22"
cffi = "1.16.0"
charset-normalizer = "3.2.0"
click = "8.1.6"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
contourpy = "1.1.0"
coverage = "7.5.4"
cycler = "0.11.0"
dataclasses-json = "0.5.14"
deprecated = "1.2.14"
dnspython = "2.4.2"
eventlet = "0.33.3"
exceptiongroup = "1.1.2"
fastapi = "^0.111.0"
fonttools = "4.42.0"
frozenlist = "1.4.0"
googleapis-common-protos = "1.63.0"
grpcio = "1.64.0"
h11 = "0.14.0"
humanize = "4.8.0"
idna = "3.4"
importlib-metadata = "7.0.0"
importlib-resources = "6.0.1"
iniconfig = "2.0.0"
joblib = "1.3.1"
kiwisolver = "1.4.4"
kombu = "5.3.2"
langchain = "^0.2.7"
langsmith = ">0.0.19"
marshmallow = "3.20.1"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
netifaces = "0.10.6"
nltk = "3.8.1"
numexpr = "2.8.5"
numpy = ">1.25.2"
openai = "^1.35.13"
openapi-schema-pydantic = "1.2.4"
packaging = ">23.1"
pandas = "2.0.3"
pgvector = ">=0.2.5,<0.3.0"
pluggy = "1.5.0"
prometheus-client = "0.17.1"
prompt-toolkit = "3.0.39"
protobuf = "4.25.3"
psycopg2 = "2.9.7"
psycopg2-binary = "2.9.8"
pycparser = "2.21"
pydantic = ">=2.7.4,<3.0.0"
pyparsing = "3.0.9"
pytest = "8.2.1"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-engineio = "4.6.0"
python-socketio = "5.8.0"
pytz = "2023.3"
pyyaml = "6.0.1"
redis = "4.6.0"
regex = "2023.6.3"
requests = "2.31.0"
scikit-learn = "1.3.0"
scipy = "1.11.1"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.19"
starlette = ">=0.37.2,<0.38.0"
tabulate = "0.9.0"
tenacity = "8.2.2"
threadpoolctl = "3.2.0"
tiktoken = ">=0.7,<1"
tomli = "2.0.1"
tornado = "6.3.3"
tqdm = "4.65.0"
typing-inspect = "0.9.0"
typing-extensions = "^4.7.1"
tzdata = "2023.3"
urllib3 = "2.0.4"
uvicorn = "0.23.2"
vine = "5.0.0"
wcwidth = "0.2.6"
websocket-client = "1.6.2"
wrapt = "1.16.0"
yarl = "1.9.2"
zipp = "3.16.2"
zope-event = "5.0"
zope-interface = "^6.1"
pydantic-settings = "^2.3.4"
langchain-openai = "^0.1.15"
langchain-community = "^0.2.7"
langchain-postgres = "^0.0.9"


[tool.poetry.group.notebook.dependencies]
jupyter = "^1.0.0"
pypdf = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
